--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,14 @@
             <version>42.6.0</version>
         </dependency>
 
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>4.5.13</version>
+            </dependency>
+
+
+
     </dependencies>
     
 </project>
